--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,9 @@
-matplotlib==3.7.0
-matplotlib-inline==0.1.6
-notebook==6.5.2
-notebook_shim==0.2.2
-numpy==1.24.2
-one-hot-encoder==1.1
-openpyxl==3.1.1
-packaging==23.0
 pandas==1.5.3
-pickleshare==0.7.5
+numpy==1.24.2
 pyecharts==2.0.1
-Pygments==2.14.0
-PyJWT==2.6.0
-Pympler==1.0.1
-PyYAML==6.0
-scikit-learn==1.2.0
-scikit-mlm==0.1.1
-scipy==1.10.0
-seaborn==0.12.2
-six==1.16.0
-sklearn==0.0.post1
 streamlit==1.14.0
 streamlit-aggrid==0.3.3
-streamlit-authenticator==0.1.5
+streamlit-authenticator==0.2.1
 streamlit-option-menu==0.3.2
-websocket-client==1.5.1
-xgboost==1.7.4
+pickleshare==0.7.5
+Pillow==9.4.0
